selfhost/test/typechecker/bindingdecl/error_type_mismatch_option.out
Error at %FILE_NAME%:1:15
Type mismatch
  |  val a: Int? = "abc"
                   ^
Expected: Int?
but instead found: String
